; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_coreaudio_enum_device.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_coreaudio_enum_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@kAudioDevicePropertyStreams = common dso_local global i32 0, align 4
@kAudioDevicePropertyScopeInput = common dso_local global i32 0, align 4
@kAudioObjectPropertyElementMaster = common dso_local global i32 0, align 4
@kAudioDevicePropertyDeviceUID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"get audio device UID\00", align 1
@kAudioDevicePropertyDeviceNameCFString = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"get audio device name\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32 (i8*, i32*, i32*, i32)*, i8*, i32)* @coreaudio_enum_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @coreaudio_enum_device(i32 (i8*, i32*, i32*, i32)* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32 (i8*, i32*, i32*, i32)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_4__, align 4
  store i32 (i8*, i32*, i32*, i32)* %0, i32 (i8*, i32*, i32*, i32)** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32 1, i32* %11, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* @kAudioDevicePropertyStreams, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %17 = load i32, i32* @kAudioDevicePropertyScopeInput, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 2
  %19 = load i32, i32* @kAudioObjectPropertyElementMaster, align 4
  store i32 %19, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 3
  store i32 0, i32* %20, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @AudioObjectGetPropertyDataSize(i32 %21, %struct.TYPE_4__* %13, i32 0, i32* null, i32* %8)
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %65

26:                                               ; preds = %3
  store i32 8, i32* %8, align 4
  %27 = load i32, i32* @kAudioDevicePropertyDeviceUID, align 4
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @AudioObjectGetPropertyData(i32 %29, %struct.TYPE_4__* %13, i32 0, i32* null, i32* %8, i32** %10)
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @enum_success(i32 %31, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %26
  store i32 1, i32* %4, align 4
  br label %65

35:                                               ; preds = %26
  %36 = load i32, i32* @kAudioDevicePropertyDeviceNameCFString, align 4
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %36, i32* %37, align 4
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @AudioObjectGetPropertyData(i32 %38, %struct.TYPE_4__* %13, i32 0, i32* null, i32* %8, i32** %9)
  store i32 %39, i32* %12, align 4
  %40 = load i32, i32* %12, align 4
  %41 = call i32 @enum_success(i32 %40, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %44, label %43

43:                                               ; preds = %35
  br label %51

44:                                               ; preds = %35
  %45 = load i32 (i8*, i32*, i32*, i32)*, i32 (i8*, i32*, i32*, i32)** %5, align 8
  %46 = load i8*, i8** %6, align 8
  %47 = load i32*, i32** %9, align 8
  %48 = load i32*, i32** %10, align 8
  %49 = load i32, i32* %7, align 4
  %50 = call i32 %45(i8* %46, i32* %47, i32* %48, i32 %49)
  store i32 %50, i32* %11, align 4
  br label %51

51:                                               ; preds = %44, %43
  %52 = load i32*, i32** %9, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %54, label %57

54:                                               ; preds = %51
  %55 = load i32*, i32** %9, align 8
  %56 = call i32 @CFRelease(i32* %55)
  br label %57

57:                                               ; preds = %54, %51
  %58 = load i32*, i32** %10, align 8
  %59 = icmp ne i32* %58, null
  br i1 %59, label %60, label %63

60:                                               ; preds = %57
  %61 = load i32*, i32** %10, align 8
  %62 = call i32 @CFRelease(i32* %61)
  br label %63

63:                                               ; preds = %60, %57
  %64 = load i32, i32* %11, align 4
  store i32 %64, i32* %4, align 4
  br label %65

65:                                               ; preds = %63, %34, %25
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local i32 @AudioObjectGetPropertyDataSize(i32, %struct.TYPE_4__*, i32, i32*, i32*) #1

declare dso_local i32 @AudioObjectGetPropertyData(i32, %struct.TYPE_4__*, i32, i32*, i32*, i32**) #1

declare dso_local i32 @enum_success(i32, i8*) #1

declare dso_local i32 @CFRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
